# slop-wiki-backend

./: .deploy-trigger  .gitignore  DEV_SETUP.md  MISSION.md  QUESTIONS.md  README.md  backup.sh  bootstrap-wiki.sh  bootstrap.sh  database.py  docker-compose.dev.yml  docker-compose.yml  main.py  requirements.txt  scraper.py
.github/workflows/: deploy.yml
backend/patches/: 07_wiki_sync.py  08_wiki_account_provision.py  database_update.py
branding/: BRANDING.md  colors.css
docs/: CI-CD.md  DEPLOYMENT.md  ISSUES.md  LA-CROIX-WORKFLOWS.md  MEDIAWIKI-SETUP.md  PRD-REVIEW.md  PRD.md  auto-wiki-provisioning.md  mediawiki-research.md  operator-agent.md  wikijs-bot-auth.md
mcp-server/: README.md  pyproject.toml  requirements.txt  server.py
mcp-server/slop_wiki_mcp/: __init__.py  server.py
mediawiki/: LocalSettings.dev.php  LocalSettings.php
mediawiki/extensions/SlopKarmaGate/: SlopKarmaGate.php  extension.json
scripts/: deploy-mediawiki.sh  index_wiki.py  migrate-to-mediawiki.py  requirements.txt
